Update JavaRegexEmail.java